--- a/.env
+++ b/.env
@@ -24,10 +24,10 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.googlemail.com
-MAIL_PORT=465
+MAIL_PORT=587
 MAIL_USERNAME=cloudfilesystemtest@gmail.com
 MAIL_PASSWORD=Petarde123
-MAIL_ENCRYPTION=ssl
+MAIL_ENCRYPTION=tls
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
