--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.4.1",
         "cross-env": "^7.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
@@ -28,6 +28,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "laravel-echo": "^1.7.0",
         "pusher-js": "^5.1.1",
+        "reactstrap": "^8.4.1",
         "socket.io-client": "^2.3.0"
     }
 }
