SPREMAM INFINITE SCROLL

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:uBrvQgSv1veWy6Q1QVuEKRNw3QMRxXw/8x5861hjL/8=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
+MIX_APP_URL_PORT =http://localhost:8000
+
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
