--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "laravel-echo": "^1.7.0",
         "pusher-js": "^5.1.1",
+        "react-image-appear": "^1.2.23",
         "reactstrap": "^8.4.1",
         "socket.io-client": "^2.3.0"
     }
