--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "laravel-echo": "^1.7.0",
         "pusher-js": "^5.1.1",
         "react-image-appear": "^1.2.23",
+        "react-router-dom": "^5.1.2",
         "reactstrap": "^8.4.1",
         "socket.io-client": "^2.3.0"
     }
